--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-		<script type="text/javascript" src="jquery.3.1.1.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<title>Cool Website</title>
 	</head>
